--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="">Фото и видео</a></li>
         <li><img src="https://via.placeholder.com/150x100" alt="Logo"></li>
         <li><a href="">Карта штата</a></li>
-        <li><a href="">Гостиницы</a></li>
+        <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
