--- a/catalog.html
+++ b/catalog.html
@@ -7,63 +7,78 @@
 <body>
 <header>
   <nav>
+     <a href="index.html"><img src="https://via.placeholder.com/150x100" alt="Logo"></a>
     <ul>
       <li><a href="">Информация</a></li>
       <li><a href="">Фото и видео</a></li>
-      <li><img src="https://via.placeholder.com/150x100" alt="Logo"></li>
       <li><a href="">Карта штата</a></li>
       <li><a href="catalog.html">Гостиницы</a></li>
     </ul>
   </nav>
 </header>
 <main>
+<section>
   <h1>Список гостиниц</h1>
-  <ul>
+ <ul>
    <li>
      <img src="https://via.placeholder.com/150x100" alt="Amara resort & spa">
-     <h2> Amara resort & spa</h2>
+     <a href="#"><h2> Amara resort & spa</h2></a>
      <p>Гостиница от 4000 р.</p>
-     <a href="">Подробнее</a>
-     <button type="button">Забронировать</button>
-     <p><span>*</span>
-     <span>*</span>
-     <span>*</span>
-       <span>*</span></p>
-     <p><span>Рейтинг: 8,5</span></p>
+     <a href="#">Подробнее</a>
+     <a href="#">Забронировать</button></a>
+	 <ul>
+     <li>*</li>
+     <li>*</li>
+     <li>*</li>
+       <li>*</li>
+	   </ul>
+     <span>Рейтинг: 8,5</span>
    </li>
 
     <li>
       <img src="https://via.placeholder.com/150x100" alt="Desert quail inn">
-      <h2>Desert quail inn</h2>
+      <a href="#"><h2>Desert quail inn</h2></a>
       <p>Мотель от 3000 р.</p>
-      <a href="">Подробнее</a>
-      <button type="button">Забронировать</button>
-      <p><span>*</span>
-      <span>*</span>
-        <span>*</span></p>
-      <p> <span>Рейтинг: 8,9</span></p>
+      <a href="#">Подробнее</a>
+      <a href="#">Забронировать</a>
+<ul>
+	  <li>*</li>
+      <li>*</li>
+        <li>*</li>
+		</ul>
+      <span>Рейтинг: 8,9</span>
     </li>
     <li>
     <img src="https://via.placeholder.com/150x100" alt="Villas at poco diablo">
-    <h2>Villas at poco diablo</h2>
+    <a href="#"><h2>Villas at poco diablo</h2></a>
     <p>Апартаменты от 2000 р.</p>
-      <a href="">Подробнее</a>
-    <button type="button">Забронировать</button>
-    <p><span>*</span>
-      <span>*</span></p>
-    <p><span>Рейтинг: 9,2</span></p>
+      <a href="#">Подробнее</a>
+    <a href="#">Забронировать</a>
+	<ul>
+    <li>*</li>
+      <li>*</li>
+	  </ul>
+    <span>Рейтинг: 9,2</span>
     </li>
   </ul>
+  <section/>
 </main>
 <footer>
-  <ul>
-    <li>
-      #Visitsedonna
-    </li>
-    <li>
-      Website by
-    </li>
-  </ul>
+ <p>
+ #Visitsedonna
+ </p>
+     <div>
+      <ul>
+        <li><a href="#">Вконтакте </a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
+      </ul>
+    </div>
+    <p>
+	Website by
+	<img src="https://via.placeholder.com/150x100" alt="html academy logo">
+	HTML academy
+    </p>
 </footer>
-</body>
+  </body>
 </html>
