--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
       <li><a href="">Информация</a></li>
       <li><a href="">Фото и видео</a></li>
       <li><a href="">Карта штата</a></li>
-      <li><a href="catalog.html">Гостиницы</a></li>
+      <li>Гостиницы</li>
     </ul>
   </nav>
 </header>
@@ -25,7 +25,7 @@
      <a href="#"><h2> Amara resort & spa</h2></a>
      <p>Гостиница от 4000 р.</p>
      <a href="#">Подробнее</a>
-     <a href="#">Забронировать</button></a>
+     <a href="#">Забронировать</a>
 	 <ul>
      <li>*</li>
      <li>*</li>
@@ -61,7 +61,7 @@
     <span>Рейтинг: 9,2</span>
     </li>
   </ul>
-  <section/>
+  </section>
 </main>
 <footer>
  <p>
