--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   </header>
   <main>
     <section>
+	<h1>Картинки под шапкой</h1>
 	 <img src="https://via.placeholder.com/150x100" alt="Welcome">
         <img src="https://via.placeholder.com/150x100" alt="Sedona">
-      </p>
     </section>
 
 <section>
