--- a/catalog.html
+++ b/catalog.html
@@ -6,57 +6,58 @@
 </head>
 <body>
 <header>
-  <nav>
-     <a href="index.html"><img src="https://via.placeholder.com/150x100" alt="Logo"></a>
-    <ul>
-      <li><a href="">Информация</a></li>
-      <li><a href="">Фото и видео</a></li>
-      <li><a href="">Карта штата</a></li>
-      <li>Гостиницы</li>
-    </ul>
-  </nav>
-</header>
+    <nav>
+	<a href=index.html><img src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/> </a> 
+		<img src="img/wb3.png" width="244" height="56" alt="White square">
+      <ul>
+        <li><a href="">Информация <img src="img/wb1.png" width="239" height="56" alt="White square"></a></li>
+        <li><a href="">Фото и видео <img src="img/wb2.png" width="239" height="56" alt="White square"></a></li>
+        <li><a href="">Карта штата <img src="img/wb4.png" width="239" height="56" alt="White square"></a></li>
+        <li><a href="catalog.html">Гостиницы <img src="img/wb5.png" width="239" height="56" alt="White square"></a></li>
+      </ul>
+    </nav>
+  </header>
 <main>
 <section>
   <h1>Список гостиниц</h1>
  <ul>
    <li>
-     <img src="https://via.placeholder.com/150x100" alt="Amara resort & spa">
+     <img src="img/amara.jpg" width="135" height="90" alt="Amara resort & spa">
      <a href="#"><h2> Amara resort & spa</h2></a>
      <p>Гостиница от 4000 р.</p>
      <a href="#">Подробнее</a>
      <a href="#">Забронировать</a>
 	 <ul>
-     <li>*</li>
-     <li>*</li>
-     <li>*</li>
-       <li>*</li>
+     <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
+     <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
+     <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
+       <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
 	   </ul>
      <span>Рейтинг: 8,5</span>
    </li>
 
     <li>
-      <img src="https://via.placeholder.com/150x100" alt="Desert quail inn">
+      <img src="img/desert.jpg" width="135" height="90" alt="Desert quail inn">
       <a href="#"><h2>Desert quail inn</h2></a>
       <p>Мотель от 3000 р.</p>
       <a href="#">Подробнее</a>
       <a href="#">Забронировать</a>
 <ul>
-	  <li>*</li>
-      <li>*</li>
-        <li>*</li>
+	  <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
+      <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
+        <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
 		</ul>
       <span>Рейтинг: 8,9</span>
     </li>
     <li>
-    <img src="https://via.placeholder.com/150x100" alt="Villas at poco diablo">
+    <img src="img/villast.jpg" width="135" height="90" alt="Villas at poco diablo">
     <a href="#"><h2>Villas at poco diablo</h2></a>
     <p>Апартаменты от 2000 р.</p>
       <a href="#">Подробнее</a>
     <a href="#">Забронировать</a>
 	<ul>
-    <li>*</li>
-      <li>*</li>
+    <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
+      <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
 	  </ul>
     <span>Рейтинг: 9,2</span>
     </li>
@@ -65,19 +66,20 @@
 </main>
 <footer>
  <p>
- #Visitsedonna
+ #Visitsedonna 
  </p>
      <div>
+<img src="img/footer-white-b.png" width="1200" height="120" alt="white rectangle">
       <ul>
-        <li><a href="#">Вконтакте </a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
+        <li><a href="#"><img src="img/t.png" width="46" height="48" alt="twitter"> </a></li>
+        <li><a href="#"><img src="img/fb-icon.png" width="46" height="48" alt="facebook"></a></li>
+        <li><a href="#"><img src="img/youtube.png" width="46" height="48" alt="twitter"></a></li>
       </ul>
     </div>
     <p>
 	Website by
-	<img src="https://via.placeholder.com/150x100" alt="html academy logo">
-	HTML academy
+	<a href="#"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
+	
     </p>
 </footer>
   </body>
