--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
 
 <section>
-  <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!
+  <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!!
   </h2>
   <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 </section>
