--- a/catalog.html
+++ b/catalog.html
@@ -5,15 +5,14 @@
 	<title>Каталог</title>
 </head>
 <body>
-<header>
+ <header>
     <nav>
-	<a href=index.html><img src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/> </a> 
-		<img src="img/wb3.png" width="244" height="56" alt="White square">
+	<img src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/> 
       <ul>
-        <li><a href="">Информация <img src="img/wb1.png" width="239" height="56" alt="White square"></a></li>
-        <li><a href="">Фото и видео <img src="img/wb2.png" width="239" height="56" alt="White square"></a></li>
-        <li><a href="">Карта штата <img src="img/wb4.png" width="239" height="56" alt="White square"></a></li>
-        <li><a href="catalog.html">Гостиницы <img src="img/wb5.png" width="239" height="56" alt="White square"></a></li>
+        <li><a href="#">Информация </a></li>
+        <li><a href="#">Фото и видео </a></li>
+        <li><a href="#">Карта штата </a></li>
+        <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
@@ -69,7 +68,6 @@
  #Visitsedonna 
  </p>
      <div>
-<img src="img/footer-white-b.png" width="1200" height="120" alt="white rectangle">
       <ul>
         <li><a href="#"><img src="img/t.png" width="46" height="48" alt="twitter"> </a></li>
         <li><a href="#"><img src="img/fb-icon.png" width="46" height="48" alt="facebook"></a></li>
