--- a/catalog.html
+++ b/catalog.html
@@ -7,12 +7,12 @@
 <body>
  <header>
     <nav>
-	<img src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/> 
+      <a href="index.html"><img src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/></a>
       <ul>
         <li><a href="#">Информация </a></li>
         <li><a href="#">Фото и видео </a></li>
         <li><a href="#">Карта штата </a></li>
-        <li><a href="catalog.html">Гостиницы</a></li>
+        <li><a href="#">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
@@ -65,7 +65,7 @@
 </main>
 <footer>
  <p>
- #Visitsedonna 
+ #Visitsedonna
  </p>
      <div>
       <ul>
@@ -77,7 +77,7 @@
     <p>
 	Website by
 	<a href="#"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
-	
+
     </p>
 </footer>
   </body>
