fixed form errors

--- a/catalog.html
+++ b/catalog.html
@@ -19,65 +19,61 @@
 <main>
 <section>
   <h1>Список гостиниц</h1>
- <ul>
-   <li>
-     <img src="img/amara.jpg" width="135" height="90" alt="Amara resort & spa">
-     <a href="#"><h2> Amara resort & spa</h2></a>
-     <p>Гостиница от 4000 р.</p>
-     <a href="#">Подробнее</a>
-     <a href="#">Забронировать</a>
-	 <ul>
-     <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
-     <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
-     <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
-       <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
-	   </ul>
-     <span>Рейтинг: 8,5</span>
-   </li>
-
+  <ul>
+    <li>
+      <img src="img/amara.jpg" width="135" height="90" alt="Amara resort & spa">
+      <a href="#"><h2> Amara resort & spa</h2></a>
+      <p>Гостиница от 4000 р.</p>
+      <a href="#">Подробнее</a>
+      <a href="#">Забронировать</a>
+      <ul>
+        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
+        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
+        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
+        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
+      </ul>
+      <span>Рейтинг: 8,5</span>
+    </li>
     <li>
       <img src="img/desert.jpg" width="135" height="90" alt="Desert quail inn">
       <a href="#"><h2>Desert quail inn</h2></a>
       <p>Мотель от 3000 р.</p>
       <a href="#">Подробнее</a>
       <a href="#">Забронировать</a>
-<ul>
-	  <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
-      <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
-        <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
-		</ul>
+      <ul>
+        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
+        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
+        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
+      </ul>
       <span>Рейтинг: 8,9</span>
     </li>
     <li>
-    <img src="img/villast.jpg" width="135" height="90" alt="Villas at poco diablo">
-    <a href="#"><h2>Villas at poco diablo</h2></a>
-    <p>Апартаменты от 2000 р.</p>
+      <img src="img/villast.jpg" width="135" height="90" alt="Villas at poco diablo">
+      <a href="#"><h2>Villas at poco diablo</h2></a>
+      <p>Апартаменты от 2000 р.</p>
       <a href="#">Подробнее</a>
-    <a href="#">Забронировать</a>
-	<ul>
-    <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
-      <li><img src="img/★.svg" width="18" height="18" alt="zvezda"></li>
-	  </ul>
-    <span>Рейтинг: 9,2</span>
+      <a href="#">Забронировать</a>
+      <ul>
+        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
+        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
+      </ul>
+      <span>Рейтинг: 9,2</span>
     </li>
   </ul>
-  </section>
+</section>
 </main>
 <footer>
  <p>
- #Visitsedonna
+ #Visitsedona
  </p>
-     <div>
       <ul>
-        <li><a href="#"><img src="img/t.png" width="46" height="48" alt="twitter"> </a></li>
-        <li><a href="#"><img src="img/fb-icon.png" width="46" height="48" alt="facebook"></a></li>
-        <li><a href="#"><img src="img/youtube.png" width="46" height="48" alt="twitter"></a></li>
+        <li><a href="#"><img src="img/twitter.svg" width="46" height="48" alt="twitter"> </a></li>
+        <li><a href="#"><img src="img/fb-icon.svg" width="46" height="48" alt="facebook"></a></li>
+        <li><a href="#"><img src="img/youtube.svg" width="46" height="48" alt="youtube"></a></li>
       </ul>
-    </div>
     <p>
 	Website by
-	<a href="#"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
-
+	<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
     </p>
 </footer>
   </body>
