--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
     <section>
 	<h1>Картинки под шапкой</h1>
     </section>
-
 <section>
   <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!
   </h2>
   <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 </section>
-
     <section>
       <h2> Заинтересовались?</h2>
       <p>
@@ -36,50 +34,46 @@
     </section>
 	<section>
 	<h2> Поиск гостиницы в Седоне</h2>
-    <form class="user" method="post"
-          action="https://echo.htmlacademy.ru"></form>
-	 <p>
-     <label for="data-zaezda">Дата заезда:</label>
-     <input id="data-zaezda" type="text" name="data" placeholder="24 апреля 2017">
-		<img src="img/calendar.svg" width="21" height="22" alt="calendar">
-      </p>
-      <p>
-        <label for="data-vyezda">Дата выезда:</label>
-        <input id="data-vyezda" type="text" name="data" placeholder="4 июля 2017">
-	  <img src="img/calendar.svg" width="21" height="22" alt="calendar">
-	  </p>
-    <p>
-      <label for="vzroslye">Взрослые:</label>
+    <form class="" method="post"
+          action="https://echo.htmlacademy.ru">
+	 <div>
+     <label for="arrival-date">Дата заезда:</label>
+     <input id="arrival-date" type="text" name="data" placeholder="24 апреля 2017">
+		<img src="img/calendar.svg" width="21" height="22" alt="">
+      </div>
+      <div>
+        <label for="date-of-departure">Дата выезда:</label>
+        <input id="date-of-departure" type="text" name="data" placeholder="4 июля 2017">
+	  <img src="img/calendar.svg" width="21" height="22" alt="">
+	  </div>
+    <div>
+      <label for="adults">Взрослые:</label>
       <button type="button" aria-label="Убрать">-</button>
-      <input id="vzroslye" type="text" name="kollichestvo" placeholder="2">
+      <input id="adults" type="text" name="quantity-adults" placeholder="2">
       <button type="button" aria-label="Добавить">+</button>
-    </p>
-    <p>
-      <label for="deti">Дети:</label>
+    </div>
+    <div>
+      <label for="children">Дети:</label>
       <button type="button" aria-label="Убрать">-</button>
-      <input id="deti" type="text" name="kollichestvo" placeholder="0">
+      <input id="children" type="text" name="quantity-children" placeholder="0">
       <button type="button" aria-label="Добавить">+</button>
-    </p>
-
-      <p>
-        <button type="button">Найти</button>
-      </p>
+    </div>
+        <button type="submit">Найти</button>
+      </form>
 	</section>
   </main>
 <footer>
  <p>
- #Visitsedonna
+ #Visitsedona
  </p>
-     <div>
-      <ul>
-        <li><a href="#"><img src="img/t.png" width="46" height="48" alt="twitter"> </a></li>
-        <li><a href="#"><img src="img/fb-icon.png" width="46" height="48" alt="facebook"></a></li>
-        <li><a href="#"><img src="img/youtube.png" width="46" height="48" alt="twitter"></a></li>
-      </ul>
-    </div>
+    <ul>
+      <li><a href="#"><img src="img/twitter.svg" width="46" height="48" alt="twitter"> </a></li>
+      <li><a href="#"><img src="img/fb-icon.svg" width="46" height="48" alt="facebook"></a></li>
+      <li><a href="#"><img src="img/youtube.svg" width="46" height="48" alt="youtube"></a></li>
+    </ul>
     <p>
 	Website by
-	<a href="#"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
+	<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
 
     </p>
 </footer>
