--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Каталог</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+	<link href="css/normalize.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
  <header>
-    <nav>
+    <nav class="navigation">
       <a href="index.html"><img src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/></a>
-      <ul>
+      <ul class="navigation-list">
         <li><a href="#">Информация </a></li>
         <li><a href="#">Фото и видео </a></li>
         <li><a href="#">Карта штата </a></li>
@@ -17,7 +20,7 @@
     </nav>
   </header>
 <main>
-<section>
+<section class="item-hotels">
   <h1>Список гостиниц</h1>
   <ul>
     <li>
