--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Седона</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+	<link href="css/normalize.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
   </head>
   <body>
   <header>
-    <nav>
-	<img src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/>
-      <ul>
+    <nav class="navigation">
+	<img class="logo" src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/>
+      <ul class="navigation-list">
         <li><a href="#">Информация </a></li>
         <li><a href="#">Фото и видео </a></li>
         <li><a href="#">Карта штата </a></li>
@@ -19,20 +22,22 @@
   <main>
     <section>
 	<h1>Картинки под шапкой</h1>
-    </section>
-<section>
+	<img class="img-welcome" src="img/welcome.png" width="459" height="353" alt="Welcome to the gorgeus Sedona">
+    <img src="img/polygon.png" width="1200" height="59">
+	</section>
+<section class="description-section">
   <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!
   </h2>
   <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 </section>
-    <section>
+    <div class="desc-div">
       <h2> Заинтересовались?</h2>
       <p>
         Укажите предполагаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в Седоне
       </p>
-    </section>
-	<section>
+    </div>
+	<section class="search">
 	<h2> Поиск гостиницы в Седоне</h2>
     <form class="" method="post"
           action="https://echo.htmlacademy.ru">
