--- a/catalog.html
+++ b/catalog.html
@@ -22,59 +22,45 @@
 <main>
 <section class="item-hotels">
   <h1>Список гостиниц</h1>
-  <ul>
+  <ul class="list-hotel-description">
     <li>
       <img src="img/amara.jpg" width="135" height="90" alt="Amara resort & spa">
       <a href="#"><h2> Amara resort & spa</h2></a>
-      <p>Гостиница от 4000 р.</p>
-      <a href="#">Подробнее</a>
-      <a href="#">Забронировать</a>
-      <ul>
-        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
-        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
-        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
-        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
-      </ul>
-      <span>Рейтинг: 8,5</span>
+      <p class="price">Гостиница от 4000 р.</p>
+      <a class="link-more" href="#">Подробнее</a>
+      <a class="link-book" href="#">Забронировать</a>
+      <span class="rating">Рейтинг: 8,5</span>
     </li>
     <li>
       <img src="img/desert.jpg" width="135" height="90" alt="Desert quail inn">
       <a href="#"><h2>Desert quail inn</h2></a>
-      <p>Мотель от 3000 р.</p>
-      <a href="#">Подробнее</a>
-      <a href="#">Забронировать</a>
-      <ul>
-        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
-        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
-        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
-      </ul>
-      <span>Рейтинг: 8,9</span>
+      <p class="price">Мотель от 3000 р.</p>
+      <a class="link-more" href="#">Подробнее</a>
+      <a class="link-book" href="#">Забронировать</a>
+      <span class="rating">Рейтинг: 8,9</span>
     </li>
     <li>
       <img src="img/villast.jpg" width="135" height="90" alt="Villas at poco diablo">
       <a href="#"><h2>Villas at poco diablo</h2></a>
-      <p>Апартаменты от 2000 р.</p>
-      <a href="#">Подробнее</a>
-      <a href="#">Забронировать</a>
-      <ul>
-        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
-        <li><img src="img/star.svg" width="18" height="18" alt="star"></li>
-      </ul>
-      <span>Рейтинг: 9,2</span>
+      <p class="price">Апартаменты от 2000 р.</p>
+      <a class="link-more" href="#">Подробнее</a>
+      <a class="link-book" href="#">Забронировать</a>
+      <span class="rating">Рейтинг: 9,2</span>
     </li>
   </ul>
 </section>
 </main>
 <footer>
- <p>
+
+ <p class="hashtag">
  #Visitsedona
  </p>
-      <ul>
-        <li><a href="#"><img src="img/twitter.svg" width="46" height="48" alt="twitter"> </a></li>
-        <li><a href="#"><img src="img/fb-icon.svg" width="46" height="48" alt="facebook"></a></li>
-        <li><a href="#"><img src="img/youtube.svg" width="46" height="48" alt="youtube"></a></li>
+      <ul class="contacts-list">
+        <li><a href="#"><img src="img/twitter.svg" width="17" height="15" alt="twitter"> </a></li>
+        <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
+        <li><a href="#"><img src="img/youtube.svg" width="20" height="16" alt="youtube"></a></li>
       </ul>
-    <p>
+    <p class="link signature">
 	Website by
 	<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
     </p>
