--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
     </nav>
   </header>
   <main>
-    <section>
-	<h1>Картинки под шапкой</h1>
+    <div>
 	<img class="img-welcome" src="img/welcome.png" width="459" height="353" alt="Welcome to the gorgeus Sedona">
     <img src="img/polygon.png" width="1200" height="59">
-	</section>
+	</div>
 <section class="description-section">
-  <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!
-  </h2>
+  <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!
+  </h1>
   <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
 </section>
     <div class="desc-div">
@@ -37,46 +36,18 @@
         и мы покажем вам лучшие предложения гостиниц в Седоне
       </p>
     </div>
-	<section class="search">
-	<h2> Поиск гостиницы в Седоне</h2>
-    <form class="" method="post"
-          action="https://echo.htmlacademy.ru">
-	 <div>
-     <label for="arrival-date">Дата заезда:</label>
-     <input id="arrival-date" type="text" name="data" placeholder="24 апреля 2017">
-		<img src="img/calendar.svg" width="21" height="22" alt="">
-      </div>
-      <div>
-        <label for="date-of-departure">Дата выезда:</label>
-        <input id="date-of-departure" type="text" name="data" placeholder="4 июля 2017">
-	  <img src="img/calendar.svg" width="21" height="22" alt="">
-	  </div>
-    <div>
-      <label for="adults">Взрослые:</label>
-      <button type="button" aria-label="Убрать">-</button>
-      <input id="adults" type="text" name="quantity-adults" placeholder="2">
-      <button type="button" aria-label="Добавить">+</button>
-    </div>
-    <div>
-      <label for="children">Дети:</label>
-      <button type="button" aria-label="Убрать">-</button>
-      <input id="children" type="text" name="quantity-children" placeholder="0">
-      <button type="button" aria-label="Добавить">+</button>
-    </div>
-        <button type="submit">Найти</button>
-      </form>
-	</section>
   </main>
 <footer>
- <p>
+
+ <p class="hashtag">
  #Visitsedona
  </p>
-    <ul>
-      <li><a href="#"><img src="img/twitter.svg" width="46" height="48" alt="twitter"> </a></li>
-      <li><a href="#"><img src="img/fb-icon.svg" width="46" height="48" alt="facebook"></a></li>
-      <li><a href="#"><img src="img/youtube.svg" width="46" height="48" alt="youtube"></a></li>
+    <ul class="contacts-list">
+      <li><a href="#"><img src="img/twitter.svg" width="17" height="15" alt="twitter"> </a></li>
+      <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
+      <li><a href="#"><img src="img/youtube.svg" width="20" height="16" alt="youtube"></a></li>
     </ul>
-    <p>
+    <p class="link-signature">
 	Website by
 	<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
 
