--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
   <ul class="list-hotel-description">
     <li>
       <img src="img/amara.jpg" width="135" height="90" alt="Amara resort & spa">
-      <a href="#"><h2> Amara resort & spa</h2></a>
+      <a href="#"><h2 class="title-name"> Amara resort & spa</h2></a>
       <p class="price">Гостиница от 4000 р.</p>
       <a class="link-more" href="#">Подробнее</a>
       <a class="link-book" href="#">Забронировать</a>
@@ -33,7 +33,7 @@
     </li>
     <li>
       <img src="img/desert.jpg" width="135" height="90" alt="Desert quail inn">
-      <a href="#"><h2>Desert quail inn</h2></a>
+      <a href="#"><h2 class="title-name">Desert quail inn</h2></a>
       <p class="price">Мотель от 3000 р.</p>
       <a class="link-more" href="#">Подробнее</a>
       <a class="link-book" href="#">Забронировать</a>
@@ -41,7 +41,7 @@
     </li>
     <li>
       <img src="img/villast.jpg" width="135" height="90" alt="Villas at poco diablo">
-      <a href="#"><h2>Villas at poco diablo</h2></a>
+      <a href="#"><h2 class="title-name">Villas at poco diablo</h2></a>
       <p class="price">Апартаменты от 2000 р.</p>
       <a class="link-more" href="#">Подробнее</a>
       <a class="link-book" href="#">Забронировать</a>
