--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-  <header>
+  <header class="main-header">
     <nav class="navigation">
+	<div class="navigation-wrapper">
 	<img class="logo" src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/>
       <ul class="navigation-list">
         <li><a href="#">Информация </a></li>
@@ -17,13 +18,14 @@
         <li><a href="#">Карта штата </a></li>
         <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
+	  </div>
     </nav>
   </header>
   <main>
-    <div>
+    <section class="section-content">
 	<img class="img-welcome" src="img/welcome.png" width="459" height="353" alt="Welcome to the gorgeus Sedona">
     <img src="img/polygon.png" width="1200" height="59">
-	</div>
+	</section>
 <section class="description-section">
   <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!
   </h1>
