--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-  <header class="main-header">
+  <header class="main-header container">
     <nav class="navigation">
 	<div class="navigation-wrapper">
 	<img class="logo" src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/>
@@ -21,10 +21,10 @@
 	  </div>
     </nav>
   </header>
-  <main>
+  <main class="container main-background">
     <section class="section-content">
 	<img class="img-welcome" src="img/welcome.png" width="459" height="353" alt="Welcome to the gorgeus Sedona">
-    <img src="img/polygon.png" width="1200" height="59">
+      <img src="img/polygon.png" class="img-polygon" width="1201" height="59" alt="">
 	</section>
 <section class="description-section">
   <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!
@@ -39,15 +39,15 @@
       </p>
     </div>
   </main>
-<footer>
+<footer class="container footer">
 
  <p class="hashtag">
  #Visitsedona
  </p>
     <ul class="contacts-list">
-      <li><a href="#"><img src="img/twitter.svg" width="17" height="15" alt="twitter"> </a></li>
-      <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
-      <li><a href="#"><img src="img/youtube.svg" width="20" height="16" alt="youtube"></a></li>
+      <li><a class="link-icn" href="#"><img src="img/twitter.svg" width="17" height="15" alt="twitter"> </a></li>
+      <li><a class="link-icn" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
+      <li><a class="link-icn" href="#"><img src="img/youtube.svg" width="20" height="16" alt="youtube"></a></li>
     </ul>
     <p class="link-signature">
 	Website by
