--- a/catalog.html
+++ b/catalog.html
@@ -1,69 +1,78 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<title>Каталог</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
-	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>Седона</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
- <header>
-    <nav class="navigation">
-      <a href="index.html"><img src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/></a>
+<header class="main-header container">
+  <nav class="navigation">
+    <div class="navigation-wrapper">
+      <a href="index.html"><img class="logo"  src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/></a>
       <ul class="navigation-list">
         <li><a href="#">Информация </a></li>
         <li><a href="#">Фото и видео </a></li>
         <li><a href="#">Карта штата </a></li>
-        <li><a href="#">Гостиницы</a></li>
+        <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
+      </div>
     </nav>
-  </header>
-<main>
+ </header>
+<main class="container main-background">
 <section class="item-hotels">
-  <h1>Список гостиниц</h1>
   <ul class="list-hotel-description">
-    <li>
-      <img src="img/amara.jpg" width="135" height="90" alt="Amara resort & spa">
+    <li class="li-item">
+      <img class="hotel-img" src="img/amara.jpg" width="135" height="90" alt="Amara resort & spa">
+      <div class="hotel-info">
       <a href="#"><h2 class="title-name"> Amara resort & spa</h2></a>
       <p class="price">Гостиница от 4000 р.</p>
       <a class="link-more" href="#">Подробнее</a>
       <a class="link-book" href="#">Забронировать</a>
       <span class="rating">Рейтинг: 8,5</span>
+        </div>
     </li>
-    <li>
-      <img src="img/desert.jpg" width="135" height="90" alt="Desert quail inn">
+
+    <li class="li-item">
+      <img class="hotel-img" src="img/desert.jpg" width="135" height="90" alt="Desert quail inn">
+      <div class="hotel-info">
       <a href="#"><h2 class="title-name">Desert quail inn</h2></a>
       <p class="price">Мотель от 3000 р.</p>
       <a class="link-more" href="#">Подробнее</a>
       <a class="link-book" href="#">Забронировать</a>
       <span class="rating">Рейтинг: 8,9</span>
+      </div>
     </li>
-    <li>
-      <img src="img/villast.jpg" width="135" height="90" alt="Villas at poco diablo">
+    <li class="li-item">
+      <img class="hotel-img" src="img/villast.jpg" width="135" height="90" alt="Villas at poco diablo">
+      <div class="hotel-info">
       <a href="#"><h2 class="title-name">Villas at poco diablo</h2></a>
       <p class="price">Апартаменты от 2000 р.</p>
       <a class="link-more" href="#">Подробнее</a>
       <a class="link-book" href="#">Забронировать</a>
       <span class="rating">Рейтинг: 9,2</span>
+      </div>
     </li>
   </ul>
 </section>
 </main>
-<footer>
+ <footer class="container footer">
 
- <p class="hashtag">
- #Visitsedona
- </p>
-      <ul class="contacts-list">
-        <li><a href="#"><img src="img/twitter.svg" width="17" height="15" alt="twitter"> </a></li>
-        <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
-        <li><a href="#"><img src="img/youtube.svg" width="20" height="16" alt="youtube"></a></li>
-      </ul>
-    <p class="link signature">
-	Website by
-	<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
-    </p>
-</footer>
+   <p class="hashtag">
+     #Visitsedona
+   </p>
+   <ul class="contacts-list">
+     <li><a class="link-icn" href="#"><img src="img/twitter.svg" width="17" height="15" alt="twitter"> </a></li>
+     <li><a class="link-icn" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
+     <li><a class="link-icn" href="#"><img src="img/youtube.svg" width="20" height="16" alt="youtube"></a></li>
+   </ul>
+   <p class="link-signature">
+     Website by
+     <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
+
+   </p>
+ </footer>
   </body>
 </html>
