--- a/index.html
+++ b/index.html
@@ -38,6 +38,35 @@
         и мы покажем вам лучшие предложения гостиниц в Седоне
       </p>
     </div>
+<section class="search">
+  <h2> Поиск гостиницы в Седоне</h2>
+<form class="" method="post"
+  action="https://echo.htmlacademy.ru">
+<div>
+   <label for="arrival-date">Дата заезда:</label>
+    <input id="arrival-date" type="text" name="data" placeholder="24 апреля 2017">
+    <img src="img/calendar.svg" width="21" height="22" alt="">
+</div>
+<div>
+   <label for="date-of-departure">Дата выезда:</label>
+   <input id="date-of-departure" type="text" name="data" placeholder="4 июля 2017">
+   <img src="img/calendar.svg" width="21" height="22" alt="">
+</div>
+<div>
+   <label for="adults">Взрослые:</label>
+   <button type="button" aria-label="Убрать">-</button>
+   <input id="adults" type="text" name="quantity-adults" placeholder="2">
+     <button type="button" aria-label="Добавить">+</button>
+</div>
+<div>
+   <label for="children">Дети:</label>
+   <button type="button" aria-label="Убрать">-</button>
+   <input id="children" type="text" name="quantity-children" placeholder="0">
+   <button type="button" aria-label="Добавить">+</button>
+</div>
+     <button type="submit">Найти</button>
+</form>
+</section>
   </main>
 <footer class="container footer">
 
