--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <img src="img/polygon.png" class="img-polygon" width="1201" height="59" alt="">
   </section>
   <section class="description-section">
-    <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!
+    <h1 class="title-h1">Седона - небольшой городок в Аризоне, заслуживающий большего!
     </h1>
     <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
   </section>
@@ -61,7 +61,7 @@
 		</div>
       </div>
       <div class="children">
-        <label class="label-date" for="children">Дети:</label>
+        <label for="children">Дети:</label>
 		<div class="quantity-counter">
         <button type="button" aria-label="Убрать">-</button>
         <input id="children" type="text" name="quantity-children" placeholder="0">
@@ -69,9 +69,7 @@
 		</div>
       </div>
 	  </div>
-	  <div class="button-type-submit">
-      <button type="submit">Найти</button>
-	  </div>
+      <button class="button-type-submit" type="submit">Найти</button>
 	  </div>
     </form>
   </section>
