--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </p>
   </div>
   <section class="search">
-    <h2 class="title-search"> Поиск гостиницы в Седоне</h2>
+    <a class="search-a" href="#"><h2 class="title-search"> Поиск гостиницы в Седоне</h2></a>
     <form class="form" method="post"
           action="https://echo.htmlacademy.ru">
 		  <div class="group-of-forms">
