--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
       <div class="adults">
         <label class="label-date" for="adults">Взрослые:</label>
 		<div class="quantity-counter">
-        <button type="button" aria-label="Убрать">-</button>
+        <button type="button" aria-label="Убрать"><img class="minus" src="img/minus.png" alt="#"></button>
         <input id="adults" type="text" name="quantity-adults" placeholder="2">
-        <button type="button" aria-label="Добавить">+</button>
+        <button type="button" aria-label="Добавить"><img class="plus" src="img/plus.png" alt="#"></button>
 		</div>
       </div>
       <div class="children">
         <label for="children">Дети:</label>
 		<div class="quantity-counter">
-        <button type="button" aria-label="Убрать">-</button>
+        <button type="button" aria-label="Убрать"><img class="minus" src="img/minus.png" alt="#"></button>
         <input id="children" type="text" name="quantity-children" placeholder="0">
-        <button type="button" aria-label="Добавить">+</button>
+        <button type="button" aria-label="Добавить"><img class="plus" src="img/plus.png" alt="#"></button>
 		</div>
       </div>
 	  </div>
@@ -79,9 +79,9 @@
     #Visitsedona
   </p>
   <ul class="contacts-list">
-    <li><a class="link-icn" href="#"><img src="img/twitter.svg" width="17" height="15" alt="twitter"> </a></li>
-    <li><a class="link-icn" href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
-    <li><a class="link-icn" href="#"><img src="img/youtube.svg" width="20" height="16" alt="youtube"></a></li>
+    <li><a class="link-icn" href="#"><img class="img-svg" src="img/twitter.svg" width="17" height="15" alt="twitter"> </a></li>
+    <li><a class="link-icn" href="#"><img class="img-svg" src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
+    <li><a class="link-icn" href="#"><img class="img-svg" src="img/youtube.svg" width="20" height="16" alt="youtube"></a></li>
   </ul>
   <p class="link-signature">
     Website by
