--- a/catalog.html
+++ b/catalog.html
@@ -68,7 +68,7 @@
   </ul>
   <p class="link-signature">
     Website by
-    <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
+    <a class="logo-color" href="https://htmlacademy.ru/intensive/htmlcss"></a>
   </p>
 </footer>
 </body>
