--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
       <div class="adults">
         <label class="label-date" for="adults">Взрослые:</label>
 		<div class="quantity-counter">
-        <button type="button" aria-label="Убрать"><img class="minus" src="img/minus.png" alt="#"></button>
+        <button class="minus" type="button" aria-label="Убрать"></button>
         <input id="adults" type="text" name="quantity-adults" placeholder="2">
-        <button type="button" aria-label="Добавить"><img class="plus" src="img/plus.png" alt="#"></button>
+        <button class="plus" type="button" aria-label="Добавить"></button>
 		</div>
       </div>
       <div class="children">
         <label for="children">Дети:</label>
 		<div class="quantity-counter">
-        <button type="button" aria-label="Убрать"><img class="minus" src="img/minus.png" alt="#"></button>
+        <button class="minus" type="button" aria-label="Убрать"></button>
         <input id="children" type="text" name="quantity-children" placeholder="0">
-        <button type="button" aria-label="Добавить"><img class="plus" src="img/plus.png" alt="#"></button>
+        <button class="plus" type="button" aria-label="Добавить"></button>
 		</div>
       </div>
 	  </div>
@@ -85,7 +85,7 @@
   </ul>
   <p class="link-signature">
     Website by
-    <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-htmlacademy.svg" width="100" height="90" alt="html academy logo"></a>
+    <a class="logo-color" href="https://htmlacademy.ru/intensive/htmlcss"></a>
   </p>
 </footer>
 </body>
