--- a/index.html
+++ b/index.html
@@ -1,92 +1,174 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <title>Седона</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body>
-<header class="main-header container">
-  <nav class="navigation">
-    <div class="navigation-wrapper">
-      <img class="logo" src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona"/>
-      <ul class="navigation-list">
-        <li><a href="#">Информация </a></li>
-        <li><a href="#">Фото и видео </a></li>
-        <li><a href="#">Карта штата </a></li>
-        <li><a href="catalog.html">Гостиницы</a></li>
-      </ul>
+  <header class="main-header container">
+    <nav class="navigation">
+      <div class="navigation-wrapper">
+        <img class="logo" src="img/logo-sedona.svg" width="140" height="72" alt="logo-sedona" />
+        <ul class="navigation-list">
+          <li class="li-information"><a href="#">Информация </a></li>
+          <li class="li-photo"><a href="#">Фото и видео </a></li>
+          <li class="li-map"><a href="#">Карта штата </a></li>
+          <li class="li-hotels"><a href="catalog.html">Гостиницы</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="container main-background">
+    <section class="section-content">
+      <img class="img-welcome" src="img/welcome.png" width="459" height="353" alt="Welcome to the gorgeus Sedona">
+      <img src="img/polygon.png" class="img-polygon" width="1201" height="59" alt="">
+    </section>
+    <section class="description-section">
+      <h1 class="title-h1">Седона - небольшой городок в Аризоне, заслуживающий большего!
+      </h1>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+    </section>
+
+    <section class="first-advantage">
+      <div class="real-town">
+        <h2>
+          Настоящий городок
+        </h2>
+        <span class="number">№1</span>
+        <p>Седона - не аттракцион для туристов,
+          там течет своя жизнь </p>
+      </div>
+      <div class="first-advantage-bg">
+      </div>
+    </section>
+
+    <section class="second-advantage">
+
+      <div class="housing">
+        <h2>
+          Жилье
+        </h2>
+        <p>Рекомендуем пожить в настоящем
+          мотеле, все как в кино! </p>
+      </div>
+
+      <div class="food">
+        <h2>
+          Еда
+        </h2>
+        <p> Всегда заказывайте фирменный бургер,
+          вы не разочаруетесь! </p>
+      </div>
+
+      <div class="souvenir">
+        <h2>
+          Сувениры
+        </h2>
+        Не только китайского, но и местного
+        производства!
+      </div>
+    </section>
+
+    <section class="third-advantage">
+      <div class="canyon">
+      </div>
+      <div>
+        <h2> Там есть
+          мост дьявола</h2>
+        <span class="number">№2</span>
+        <p>Да, по нему можно пройтись! Естм конечно
+          вы осмелитесь</p>
+      </div>
+    </section>
+
+    <section class="fourth-advantage">
+      <div>
+        <h2>Небольшая площадь</h2>
+        <span class="number">№3</span>
+        <p>Все достопримечательности 
+          находятся близко</p>
+        </div>
+
+        <div>
+          <h2>Красивая дорога</h2>
+          <span class="number">№4</span>
+          <p>Ехать в Седону из Лас-вегаса совсем 
+            не скучно!</p>
+        </div>
+        <div>
+        <h2> Мало туристов</h2>
+        <span class="number">№5</span>
+        <p>Большинство едет в гранд-каньон 
+          и толпится там</p>
+          </div>
+
+</section>
+    <div class="desc-div">
+      <h2> Заинтересовались?</h2>
+      <p>
+        Укажите предполагаемые даты поездки,
+        и мы покажем вам лучшие предложения гостиниц в Седоне
+      </p>
     </div>
-  </nav>
-</header>
-<main class="container main-background">
-  <section class="section-content">
-    <img class="img-welcome" src="img/welcome.png" width="459" height="353" alt="Welcome to the gorgeus Sedona">
-    <img src="img/polygon.png" class="img-polygon" width="1201" height="59" alt="">
-  </section>
-  <section class="description-section">
-    <h1 class="title-h1">Седона - небольшой городок в Аризоне, заслуживающий большего!
-    </h1>
-    <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-  </section>
-  <div class="desc-div">
-    <h2> Заинтересовались?</h2>
-    <p>
-      Укажите предполагаемые даты поездки,
-      и мы покажем вам лучшие предложения гостиниц в Седоне
+    <section class="search">
+      <a class="search-a" href="#">
+        <h2 class="title-search"> Поиск гостиницы в Седоне</h2>
+      </a>
+      <form class="form" method="post" action="https://echo.htmlacademy.ru">
+        <div class="group-of-forms">
+          <div class="arrival-date">
+            <label class="label-date" for="arrival-date">Дата заезда:</label>
+            <input class="input-date" id="arrival-date" type="text" name="data" placeholder="24 апреля 2017">
+          </div>
+          <div class="date-of-departure">
+            <label class="label-date" for="date-of-departure">Дата выезда:</label>
+            <input class="input-date" id="date-of-departure" type="text" name="data" placeholder="4 июля 2017">
+          </div>
+          <div class="adults-children">
+            <div class="adults">
+              <label class="label-date" for="adults">Взрослые:</label>
+              <div class="quantity-counter">
+                <button class="minus" type="button" aria-label="Убрать"></button>
+                <input id="adults" type="text" name="quantity-adults" placeholder="2">
+                <button class="plus" type="button" aria-label="Добавить"></button>
+              </div>
+            </div>
+            <div class="children">
+              <label for="children">Дети:</label>
+              <div class="quantity-counter">
+                <button class="minus" type="button" aria-label="Убрать"></button>
+                <input id="children" type="text" name="quantity-children" placeholder="0">
+                <button class="plus" type="button" aria-label="Добавить"></button>
+              </div>
+            </div>
+          </div>
+          <button class="button-type-submit" type="submit">Найти</button>
+        </div>
+      </form>
+    </section>
+  </main>
+  <footer class="container footer">
+    <p class="hashtag">
+      #Visitsedona
     </p>
-  </div>
-  <section class="search">
-    <a class="search-a" href="#"><h2 class="title-search"> Поиск гостиницы в Седоне</h2></a>
-    <form class="form" method="post"
-          action="https://echo.htmlacademy.ru">
-		  <div class="group-of-forms">
-      <div class="arrival-date">
-        <label class="label-date" for="arrival-date">Дата заезда:</label>
-        <input class="input-date" id="arrival-date" type="text" name="data" placeholder="24 апреля 2017">
-      </div>
-      <div class="date-of-departure">
-        <label class="label-date" for="date-of-departure">Дата выезда:</label>
-        <input class="input-date" id="date-of-departure" type="text" name="data" placeholder="4 июля 2017">
-      </div>
-	  <div class="adults-children">
-      <div class="adults">
-        <label class="label-date" for="adults">Взрослые:</label>
-		<div class="quantity-counter">
-        <button class="minus" type="button" aria-label="Убрать"></button>
-        <input id="adults" type="text" name="quantity-adults" placeholder="2">
-        <button class="plus" type="button" aria-label="Добавить"></button>
-		</div>
-      </div>
-      <div class="children">
-        <label for="children">Дети:</label>
-		<div class="quantity-counter">
-        <button class="minus" type="button" aria-label="Убрать"></button>
-        <input id="children" type="text" name="quantity-children" placeholder="0">
-        <button class="plus" type="button" aria-label="Добавить"></button>
-		</div>
-      </div>
-	  </div>
-      <button class="button-type-submit" type="submit">Найти</button>
-	  </div>
-    </form>
-  </section>
-</main>
-<footer class="container footer">
-  <p class="hashtag">
-    #Visitsedona
-  </p>
-  <ul class="contacts-list">
-    <li><a class="link-icn" href="#"><img class="img-svg" src="img/twitter.svg" width="17" height="15" alt="twitter"> </a></li>
-    <li><a class="link-icn" href="#"><img class="img-svg" src="img/fb-icon.svg" width="12" height="22" alt="facebook"></a></li>
-    <li><a class="link-icn" href="#"><img class="img-svg" src="img/youtube.svg" width="20" height="16" alt="youtube"></a></li>
-  </ul>
-  <p class="link-signature">
-    Website by
-    <a class="logo-color" href="https://htmlacademy.ru/intensive/htmlcss"></a>
-  </p>
-</footer>
+    <ul class="contacts-list">
+      <li><a class="link-icn" href="#"><img class="img-svg" src="img/twitter.svg" width="17" height="15" alt="twitter">
+        </a></li>
+      <li><a class="link-icn" href="#"><img class="img-svg" src="img/fb-icon.svg" width="12" height="22"
+            alt="facebook"></a></li>
+      <li><a class="link-icn" href="#"><img class="img-svg" src="img/youtube.svg" width="20" height="16"
+            alt="youtube"></a></li>
+    </ul>
+    <p class="link-signature">
+      Website by
+      <a class="logo-color" href="https://htmlacademy.ru/intensive/htmlcss"></a>
+    </p>
+  </footer>
 </body>
+
 </html>
