--- a/catalog.html
+++ b/catalog.html
@@ -14,10 +14,10 @@
         <a href="index.html"><img class="logo" src="img/logo-sedona.svg" width="140" height="72"
             alt="logo-sedona" /></a>
         <ul class="navigation-list">
-          <li><a href="#">Информация </a></li>
-          <li><a href="#">Фото и видео </a></li>
-          <li><a href="#">Карта штата </a></li>
-          <li><a class="catalog-active" href="catalog.html">Гостиницы</a></li>
+          <li class="navigation-list-item"><a href="#">Информация </a></li>
+          <li class="navigation-list-item"><a href="#">Фото и видео </a></li>
+          <li class="navigation-list-item"><a href="#">Карта штата </a></li>
+          <li class="navigation-list-item catalog-active"><a href="catalog.html">Гостиницы</a></li>
         </ul>
       </div>
     </nav>
