--- a/catalog.html
+++ b/catalog.html
@@ -29,17 +29,17 @@
           <div class="infrastructure-wraper">
           <span class="infrastructure-title">Инфраструктура</span>
           <ul>
-            <li class="li-2">Бассейн</li>
-            <li class="li-2">Парковка</li>
-            <li class="li-2">WI-FI</li>
+            <li class="li-2"><label class="check"><input class="check-input" type="checkbox" checked><span class="check-box"></span>Бассейн</label></li>
+            <li class="li-2"><label class="check"><input class="check-input" type="checkbox" disabled> <span class="check-box"></span>Парковка</label></li>
+            <li class="li-2"><label class="check"><input class="check-input" type="checkbox" checked disabled><span class="check-box"></span>WI-FI</label></li>
           </ul>
         </div>
         <div class="infrastructure-wraper">
         <span class="infrastructure-title">Тип жилья</span>
         <ul>
-            <li class="li-2">Гостиница</li>
-            <li class="li-2">Мотель</li>
-            <li class="li-2">Апартаменты</li>
+            <li class="li-2"><label class="check"><input class="check-input" type="checkbox" checked><span class="check-box"></span>Гостиница</label></li>
+            <li class="li-2"><label class="check"><input class="check-input" type="checkbox" checked><span class="check-box"></span>Мотель</label></li>
+            <li class="li-2"><label class="check"><input class="check-input" type="checkbox" checked><span class="check-box"></span>Апартаменты</label></li>
           </ul>
         </div>
         </div>
@@ -93,21 +93,21 @@
     </section>
   </main>
   <footer class="container footer">
-      <p class="hashtag">
-        #Visitsedona
-      </p>
-      <ul class="contacts-list">
-        <li><a class="link-icn" href="#"><img class="img-svg" src="img/twitter.svg" width="17" height="15" alt="twitter">
-          </a></li>
-        <li><a class="link-icn" href="#"><img class="img-svg" src="img/fb-icon.svg" width="12" height="22"
-              alt="facebook"></a></li>
-        <li><a class="link-icn" href="#"><img class="img-svg" src="img/youtube.svg" width="20" height="16"
-              alt="youtube"></a></li>
-      </ul>
-      <p class="link-signature">
-        Website by
-        <a class="logo-color" href="https://htmlacademy.ru/intensive/htmlcss"></a>
-      </p>
-    </footer>
+    <p class="hashtag">
+      #Visitsedona
+    </p>
+    <ul class="contacts-list">
+      <li><a class="link-icn" href="#"><img class="img-svg" src="img/twitter.svg" width="17" height="15" alt="twitter">
+        </a></li>
+      <li><a class="link-icn" href="#"><img class="img-svg" src="img/fb-icon.svg" width="12" height="22"
+            alt="facebook"></a></li>
+      <li><a class="link-icn" href="#"><img class="img-svg" src="img/youtube.svg" width="20" height="16"
+            alt="youtube"></a></li>
+    </ul>
+    <p class="link-signature">
+      Website by
+      <a class="logo-color" href="https://htmlacademy.ru/intensive/htmlcss"></a>
+    </p>
+  </footer>
 </body>
 </html>
